# connection-new

./: .gitignore  README.md  docker-compose.yml  fnox.toml  mise.toml  package-lock.json  package.json  postcss.config.js  pyproject.toml  tsconfig.json  vite.config.js
accounts/: factories.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers_user_followers.py  0003_remove_user_username.py  0004_user_username.py  0005_teacherprofile.py  0006_teacherprofile_picture.py  0007_alter_teacherprofile_grades.py  0008_alter_teacherprofile_biography_and_more.py
accounts/templates/accounts/: login_form.html  teacher_profile_create.html  teacher_profile_update.html
conf/: settings.py  urls.py
content/: factories.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_alter_grade_name.py  0003_alter_post_body.py  0004_alter_post_body.py  0005_alter_comment_options_comment_created_at.py  0006_alter_grade_options_grade_sort_order.py  0007_populate_grade_model.py  0008_alter_grade_options.py
core/: forms.py  mail.py  widgets.py
core/templates/: base.html  navbar.html
core/templates/widgets/: quill.html
docker/mariadb/: 10-setup-database.sql
research/: factories.py  forms.py  models.py  tests.py  urls.py  views.py
research/migrations/: 0001_initial.py  0002_consentprofile_is_open.py
search/: forms.py  models.py  urls.py  views.py
search/migrations/: 0001_initial.py  0002_search_searched_at.py
static/src/: app.js
studio/: forms.py  urls.py  views.py
(+43 files in other folders)
